# STM32F4

./: CMakeLists.txt  README.md
cmake/: arm-toolchain.cmake  compile_flags.cmake  ewarm-toolchain.cmake  spl.cmake  stm32f429zit.cmake
linker/: STM32F429ZI.ld
src/: main.c
src/config/: stm32f4xx_conf.h
